--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,22 @@ anyio==4.12.0
 async-timeout==5.0.1
 attrs==25.4.0
 beautifulsoup4==4.14.2
+blinker==1.9.0
 bs4==0.0.2
 cbor==1.0.0
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+coverage==7.13.0
 cryptography==46.0.3
 datasets==4.4.1
 Deprecated==1.3.1
 dill==0.4.0
 exceptiongroup==1.3.1
 filelock==3.20.0
+Flask==3.1.2
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.8.0
 fsspec==2025.10.0
 greenlet==3.2.4
@@ -27,15 +31,18 @@ httpx==0.28.1
 huggingface_hub==1.1.7
 idna==3.11
 ijson==3.4.0.post0
+iniconfig==2.3.0
 inscriptis==2.7.0
 ir_datasets==0.5.11
 ir_measures==0.4.3
+itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.2
 kafka-python==2.2.15
 lxml==5.4.0
 lz4==4.4.5
 MarkupSafe==3.0.3
+-e git+ssh://git@github.com/Durza71/MOinfo.git@c7c3c0f503144f13168f4241965a7faa7a17c3bf#egg=MOinfo
 more-itertools==10.8.0
 multidict==6.7.0
 multiprocess==0.70.18
@@ -47,14 +54,18 @@ pdf2image==1.17.0
 pdfminer.six==20251107
 pdfplumber==0.11.8
 pillow==12.0.0
+pluggy==1.6.0
 propcache==0.4.1
 pyarrow==22.0.0
 pycparser==2.23
+Pygments==2.19.2
 pyjnius==1.7.0
 PyPDF2==3.0.1
 pypdfium2==5.1.0
 pyterrier==1.0.1
 pytesseract==0.3.13
+pytest==9.0.2
+pytest-cov==7.0.0
 python-dateutil==2.9.0.post0
 pytrec_eval-terrier==0.5.10
 pytz==2025.2
@@ -68,6 +79,7 @@ soupsieve==2.8
 SQLAlchemy==2.0.44
 statsmodels==0.14.5
 threadpoolctl==3.6.0
+tomli==2.3.0
 tqdm==4.67.1
 trec-car-tools==2.6
 typer-slim==0.20.0
@@ -77,6 +89,7 @@ unlzw3==0.2.3
 urllib3==2.5.0
 warc3-wet==0.2.5
 warc3-wet-clueweb09==0.2.5
+Werkzeug==3.1.4
 wrapt==2.0.1
 xxhash==3.6.0
 yarl==1.22.0
